Replace Stack with ConcurrentLinkedDeque